34 hypersurface warp (#60)
* Cylindrical 3D project using scatter plot mesh.

* TessellationTube now functional.

* Cleaned up old vestigial comments.

* quick fixes for last minute bugs

* minor fmt

---------

Co-authored-by: samypr100 <3933065+samypr100@users.noreply.github.com>